--- a/pallets/veles/Cargo.toml
+++ b/pallets/veles/Cargo.toml
@@ -24,6 +24,7 @@ scale-info = { version = "2.10.0", default-features = false, features = [
 	"derive",
 ] }
 hex-literal = "0.3.1"
+log = "0.4.21"
 frame-benchmarking = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.9.0", default-features = false, optional = true }
 frame-support = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.9.0", default-features = false }
 frame-system = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.9.0", default-features = false }
