--- a/node/Cargo.toml
+++ b/node/Cargo.toml
@@ -1,91 +1,135 @@
 [package]
-name = "node-template"
-description = "A solochain node template built with Substrate, part of Polkadot Sdk."
-version = "0.0.0"
-license = "MIT-0"
+name = "veles-parachain-node"
+description = "The Veles parachain node based on the Polkadot parachain node template."
+version = "1.0.0"
+license = "Unlicense"
 authors.workspace = true
 homepage.workspace = true
 repository.workspace = true
 edition.workspace = true
 publish = false
-
 build = "build.rs"
 
-[lints]
-workspace = true
-
-[package.metadata.docs.rs]
-targets = ["x86_64-unknown-linux-gnu"]
+# [[bin]]
+# name = "veles-parachain-node"
 
 [dependencies]
-clap = { version = "4.5.3", features = ["derive"] }
-futures = { version = "0.3.30", features = ["thread-pool"] }
-serde_json = { version = "1.0.114", default-features = true }
-jsonrpsee = { version = "0.22", features = ["server"] }
-
-# substrate client
-sc-cli = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.9.0" }
-sp-core = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.9.0" }
-sc-executor = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.9.0" }
-sc-network = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.9.0" }
-sc-service = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.9.0" }
-sc-telemetry = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.9.0" }
-sc-transaction-pool = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.9.0" }
-sc-transaction-pool-api = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.9.0" }
-sc-offchain = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.9.0" }
-sc-consensus-aura = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.9.0" }
-sp-consensus-aura = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.9.0" }
-sc-consensus = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.9.0" }
-sc-consensus-grandpa = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.9.0" }
-sp-consensus-grandpa = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.9.0" }
-sc-client-api = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.9.0" }
-sc-rpc-api = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.9.0" }
-sc-basic-authorship = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.9.0" }
-
-# substrate primitives
-sp-runtime = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.9.0" }
-sp-io = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.9.0" }
-sp-timestamp = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.9.0" }
-sp-inherents = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.9.0" }
-sp-keyring = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.9.0" }
-sp-api = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.9.0" }
-sp-blockchain = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.9.0" }
-sp-block-builder = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.9.0" }
-
-# frame and pallets
-frame-system = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.9.0" }
-pallet-transaction-payment = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.9.0", default-features = false }
-pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.9.0" }
-substrate-frame-rpc-system = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.9.0" }
-
-# These dependencies are used for runtime benchmarking
-frame-benchmarking-cli = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.9.0" }
-
-# Local Dependencies
-node-template-runtime = { path = "../runtime" }
-
-# CLI-specific dependencies
-try-runtime-cli = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.9.0", optional = true }
+clap = { features = ["derive"], workspace = true }
+log = { workspace = true, default-features = true }
+codec = { workspace = true, default-features = true }
+serde = { features = ["derive"], workspace = true, default-features = true }
+jsonrpsee = { features = ["server"], workspace = true }
+futures = { workspace = true }
+serde_json = { workspace = true, default-features = true }
+docify = { workspace = true }
+veles-parachain-runtime.workspace = true
+frame-benchmarking.workspace = true
+frame-benchmarking.default-features = true
+frame-benchmarking-cli.workspace = true
+frame-benchmarking-cli.default-features = true
+pallet-transaction-payment-rpc.workspace = true
+pallet-transaction-payment-rpc.default-features = true
+sc-basic-authorship.workspace = true
+sc-basic-authorship.default-features = true
+sc-chain-spec.workspace = true
+sc-chain-spec.default-features = true
+sc-cli.workspace = true
+sc-cli.default-features = true
+sc-client-api.workspace = true
+sc-client-api.default-features = true
+sc-offchain.workspace = true
+sc-offchain.default-features = true
+sc-consensus.workspace = true
+sc-consensus.default-features = true
+sc-executor.workspace = true
+sc-executor.default-features = true
+sc-network.workspace = true
+sc-network.default-features = true
+sc-network-sync.workspace = true
+sc-network-sync.default-features = true
+sc-rpc.workspace = true
+sc-rpc.default-features = true
+sc-service.workspace = true
+sc-service.default-features = true
+sc-sysinfo.workspace = true
+sc-sysinfo.default-features = true
+sc-telemetry.workspace = true
+sc-telemetry.default-features = true
+sc-tracing.workspace = true
+sc-tracing.default-features = true
+sc-transaction-pool.workspace = true
+sc-transaction-pool.default-features = true
+sc-transaction-pool-api.workspace = true
+sc-transaction-pool-api.default-features = true
+sp-api.workspace = true
+sp-api.default-features = true
+sp-block-builder.workspace = true
+sp-block-builder.default-features = true
+sp-blockchain.workspace = true
+sp-blockchain.default-features = true
+sp-consensus-aura.workspace = true
+sp-consensus-aura.default-features = true
+sp-core.workspace = true
+sp-core.default-features = true
+sp-keystore.workspace = true
+sp-keystore.default-features = true
+sp-io.workspace = true
+sp-io.default-features = true
+sp-runtime.workspace = true
+sp-runtime.default-features = true
+sp-timestamp.workspace = true
+sp-timestamp.default-features = true
+substrate-frame-rpc-system.workspace = true
+substrate-frame-rpc-system.default-features = true
+prometheus-endpoint.workspace = true
+prometheus-endpoint.default-features = true
+polkadot-cli = { features = ["rococo-native"], workspace = true, default-features = true }
+polkadot-primitives.workspace = true
+polkadot-primitives.default-features = true
+xcm.workspace = true
+cumulus-client-cli.workspace = true
+cumulus-client-cli.default-features = true
+cumulus-client-collator.workspace = true
+cumulus-client-collator.default-features = true
+cumulus-client-consensus-aura.workspace = true
+cumulus-client-consensus-aura.default-features = true
+cumulus-client-consensus-common.workspace = true
+cumulus-client-consensus-common.default-features = true
+cumulus-client-consensus-proposer.workspace = true
+cumulus-client-consensus-proposer.default-features = true
+cumulus-client-service.workspace = true
+cumulus-client-service.default-features = true
+cumulus-primitives-core.workspace = true
+cumulus-primitives-core.default-features = true
+cumulus-primitives-parachain-inherent.workspace = true
+cumulus-primitives-parachain-inherent.default-features = true
+cumulus-relay-chain-interface.workspace = true
+cumulus-relay-chain-interface.default-features = true
+color-print = { workspace = true }
 
 [build-dependencies]
-substrate-build-script-utils = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.9.0" }
+substrate-build-script-utils.workspace = true
+substrate-build-script-utils.default-features = true
 
 [features]
-default = []
-# Dependencies that are only required if runtime benchmarking should be build.
+default = ["std"]
+std = [
+	"veles-parachain-runtime/std",
+	"log/std",
+	"xcm/std"
+]
 runtime-benchmarks = [
+	"cumulus-primitives-core/runtime-benchmarks",
 	"frame-benchmarking-cli/runtime-benchmarks",
-	"frame-system/runtime-benchmarks",
+	"frame-benchmarking/runtime-benchmarks",
+	"veles-parachain-runtime/runtime-benchmarks",
+	"polkadot-cli/runtime-benchmarks",
+	"polkadot-primitives/runtime-benchmarks",
 	"sc-service/runtime-benchmarks",
-	"node-template-runtime/runtime-benchmarks",
 	"sp-runtime/runtime-benchmarks",
 ]
-# Enable features that allow the runtime to be tried and debugged. Name might be subject to change
-# in the near future.
 try-runtime = [
-	"frame-system/try-runtime",
-	"pallet-transaction-payment/try-runtime",
-	"node-template-runtime/try-runtime",
+	"veles-parachain-runtime/try-runtime",
+	"polkadot-cli/try-runtime",
 	"sp-runtime/try-runtime",
-	"try-runtime-cli/try-runtime",
 ]
