--- a/rust-toolchain.toml
+++ b/rust-toolchain.toml
@@ -1,14 +1,5 @@
 [toolchain]
-channel = "stable"
-components = [
-	"cargo",
-	"clippy",
-	"rust-analyzer",
-	"rust-src",
-	"rust-std",
-	"rustc",
-	"rustc-dev",
-	"rustfmt",
-]
-targets = ["wasm32-unknown-unknown"]
+channel = "nightly-2024-10-18"
+components = [ "rustfmt", "clippy", "rust-src" ]
+targets = [ "wasm32-unknown-unknown" ]
 profile = "minimal"
